0.4.0-pre5
  - fix issues with new consumer tokens [afeld]
  - More forgiving about oob callback values[chrisrhoden]
  - Update Twitter consumer to use latest Twitter Gem [afeld]
  - Fixes various mongoid issues [3en]
  - Adds oauth2 consumer support
  - Fixes oauth2 provider. parameter should be redirect_uri not redirect_url [Kimtaro]
  - Most core OAuth functionality is being put into OAuthFilter. This means Rails 2.3 and above only
  0.4.0-pre4
  - Fixed bug when creating a new user from a new consumer token
  - Fix typo in consumer token [krasio]
  - Fix issue with mongoid not supporting find_by_x style queries. [3en]
  0.4.0-pre3
  - Experimental rack filter for OAuth 1.0a:
    see lib/oauth/rack/oauth_filter.rb for details
  0.4.0-pre2
  - mongoid defaults to being embedded
  - new :auto_login option in oauth_config.rb which lets you use eg. twitter as a primary authentication method
  0.4.0-pre1
	- mongoid support in rails 3 [Alexander Semyonov]
	- OAUTH 2.0 authorization_code and password grant types
	- Supports OAuth 2.0 draft 10 (Note this is incompatible with previous drafts)
	- Refactored application_controller_methods to be a lot less intrusive
	- Increased default token and key size in anticipation of OAuth2 support
	- Rails 3 support
	- Rails 3 generators [Paul Rosiana] and patches by [Alexander Flatter]
	- Modularized Rails 3 generators [Alexander Semyonov]
	- Callback urls now allow query parameters. Multiple patches but I used [Unk]'s.
10/08/2009
  0.3.14
  - Fixed the class generation when you have a custom token defined. [Brian Morearty]
10/05/2009
  0.3.13
  - Got rid of yahoo token. To support it correctly requires way too much work. Let them suffer the consequences of their decissions.
  - GoogleToken now uses portablecontacts gem
9/30/2009
  0.3.12
  - Added a simple PortableContacts adapter for GoogleToken
  - Added a SimpleClient wrapper to provide really simple wrapper for OAuth based json web services